hphp/hack/test/typecheck/reactive/test_rx_enabled2.php.exp
File "test_rx_enabled2.php", line 15, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 31, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 46, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 51, characters 13-25:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 57, characters 14-26:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 63, characters 7-19:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 71, characters 8-20:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
